--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "eslint-plugin-import": "^2.14.0",
         "mocha": "5.2.0",
         "nyc": "^13.1.0",
-        "oracledb": "^2.3.0",
         "serverless": "^1.34.1",
         "serverless-offline": "^3.31.3",
         "serverless-plugin-include-dependencies": "3.1.1",
@@ -37,6 +36,8 @@
         "joi": "^14.3.0",
         "nodemailer": "^5.1.1",
         "swagger-ui-express": "4.0.2",
-        "lib-common": "^1.2.0"
+        "oracledb": "^3.1.1",
+        "mysql": "^2.16.0",
+        "lib-common": "^1.3.4"
     }
 }
